@@ -1,3 +1,8 @@
+2006-01-07  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/term.c (term_end_multiplot): Free title string and clear
+	multiplot title.
+
 2005-01-07  Daniel Sebald  <daniel.sebald@ieee.org>
 
 	* src/gplt_x11.c (record):  Incorrect nesting of parentheses.
